--- a/journalApp/src/main/resources/application.properties
+++ b/journalApp/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=journaldb
 #spring.data.mongodb.username=myjournaldb
 #spring.data.mongodb.password=password
+spring.data.mongodb.auto-index-creation=true
 
