--- a/journalApp/src/main/resources/application.properties
+++ b/journalApp/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.application.name=Journal App
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://qanonymous756_db_user:Inpcg5Si6CoegOMo@cluster0.jjimgnf.mongodb.net/?appName=Cluster0
 spring.data.mongodb.database=journaldb
 #spring.data.mongodb.username=myjournaldb
 #spring.data.mongodb.password=password
