--- a/journalApp/pom.xml
+++ b/journalApp/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.4</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
