Refactor Moving to Global Configuration of JSON ignore

--- a/journalApp/src/main/resources/application.yml
+++ b/journalApp/src/main/resources/application.yml
@@ -2,6 +2,9 @@
 spring:
   profiles:
     active: dev
+  jackson:
+    deserialization:
+      fail-on-unknown-properties: false
 
 weather:
   api:
