Add Weekly Report of Monthly Quota Left Using Schedulers

--- a/journalApp/src/main/resources/application.yml
+++ b/journalApp/src/main/resources/application.yml
@@ -9,6 +9,13 @@ spring:
 weather:
   api:
     url: "http://api.weatherstack.com/current"
+app:
+  jobs:
+    quota-report-cron: ${QUOTA_REPORT_CRON}
+    quota-reset-cron: ${QUOTA_RESET_CRON}
+  quota:
+    max: ${QUOTA_MAX}
+
 ---
 # --- Development Profile ---
 spring:
