Add Caching to Weather Service

--- a/journalApp/src/main/resources/application.yml
+++ b/journalApp/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   data:
     redis:
       host: ${REDIS_HOST}
-      port: 6739
+      port: ${REDIS_PORT}
       password: ${REDIS_PASSWORD}
     ssl:
       enabled: false
