--- a/journalApp/src/main/resources/application.yml
+++ b/journalApp/src/main/resources/application.yml
@@ -22,6 +22,9 @@ weather:
   api:
     url: "http://api.weatherstack.com/current"
 app:
+  jwt:
+    jwt-secret: ${JWT_SECRET_KEY}
+    jwt-expiration: 3600000 # 1 hour
   jobs:
     quota-report-cron: ${QUOTA_REPORT_CRON}
     quota-reset-cron: ${QUOTA_RESET_CRON}
