--- a/journalApp/src/main/resources/application.yml
+++ b/journalApp/src/main/resources/application.yml
@@ -20,6 +20,8 @@ spring:
   security:
     filter:
       dispatcher-types: REQUEST, ASYNC, ERROR
+  application:
+    name: journal-app
 
 weather:
   api:
@@ -75,6 +77,9 @@ spring:
           auth: true
           starttls:
             enable: true
+  cloud:
+    compatibility-verifier:
+      enabled: false
 server:
   port: 8080
 logging:
