--- a/journalApp/.gitignore
+++ b/journalApp/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 AGENTS.md
 target/
+logs/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -16,6 +17,7 @@ target/
 .yml
 .log
 .env
+*.env
 
 ### IntelliJ IDEA ###
 .idea
@@ -28,7 +30,7 @@ target/
 /nbbuild/
 /dist/
 /nbdist/
-/.nb-gradle/
+/.nb-gradle
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
