--- a/journalApp/src/main/resources/application.yml
+++ b/journalApp/src/main/resources/application.yml
@@ -53,6 +53,7 @@ management:
         include: "health,info,metrics"
 eureka:
   client:
+    enabled: false
     service-url:
       defaultZone: "http://localhost:8761/eureka/"
 ---
