--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,7 +50,8 @@ management:
   endpoints:
     web:
       exposure:
-        include: "health,info,metrics"
+        include: "*"
+
 eureka:
   client:
     enabled: false
@@ -81,6 +82,11 @@ spring:
   cloud:
     compatibility-verifier:
       enabled: false
+#  springdoc:
+#    api-docs:
+#      path: "/api-docs/json"
+#    swagger-ui:
+#      path: "/api-docs/ui"
 server:
   port: 8080
 logging:
@@ -101,6 +107,13 @@ spring:
       uri: ${MONGO_DB_URI_PROD}
       database: journaldb_prod
       auto-index-creation: false # Disable in production
+management:
+  server:
+    port: 9091
+  endpoints:
+    web:
+      exposure:
+        include: "health,info,metrics"
 server:
   port: 9090
 logging:
